  - doc: Update of commandref.htm (typos and EMEM).

- Pest, Mon May 29 00:07:00 MEST 2007
  - check-in changes of 60_EM.pm to make EMEM work.

- Mon Jun  4 08:23:43 MEST 2007
  - Small changes for EM logging

- Pest Jun 10, 23:16:23 MEST 2007
  - Set wrong values in 62_EMEM to -1

- Pest Jun 12, 21:33:00 MEST 2007
  - in 62_EMEM.pm: added energy_today and energy_total

- Pest Jun 18, 20:06:23 MEST 2007
  - in 62_EMEM.pm: Power units removed from value content added to name.

- Rudi Sun Aug  5 10:59:51 MEST 2007
  - WS300 Loglevel changed for KS300 device (from 2 to GetLogLevel or 5)
  - First version of the FritzBox port: 
    - Perl binary/ftdi_sio module 
  - EM: added setTime, reset
  - docs/fritzbox.html. Note: The fb_fhem_0.1.tar.gz won't be part of CVS
    as it contains largee binaries (swapfile, perl mipsel executable, etc).

- Rudi Mon Aug  6 20:15:00 MEST 2007
  - archiving added to the main logs.
    NOTE: The FileLog filename (INT attribute) is now also called logfile.

- Rudi Wed Aug 29 08:28:34 MEST 2007
  - archive attributes clarified in the doc

- Rudi Mon Sep  3 15:47:59 MEST 2007
  - 99_Sunrise_EL.pm checked in. Replaces 99_Sunrise.pm, and does not need
    any Date module.

- Rudi Sun Sep  9 08:43:03 MEST 2007
  - mode holiday_short added + documentation. Not tested.
    any Date module.

- Rudi Wed Oct  3 18:21:36 MEST 2007
  - weblinks added. Used by webpgm2 to display more than one plot at once
  - webpgm2 output reformatted. Using CSS to divide the screen area in 3
    parts: command line, room-list and rest

- Dirk Wed Oct  7 12:45:09 MEST 2007
  - FHT lime-protection code discovered

- Dirk Wed Oct 18 23:28:00 MEST 2007
  - Softwarebuffer for FHT devices with queuing unsent commands and
    repeating commands by transmission failure
  - FHT low temperatur warning and setting for lowtemp-offset
  - Change naming for state into warnings
    Tagged as dirkh_20071019_0

- Martin Fri Dec 21 13:39:17 CET 2007
  - voip2fhem added (contrib/)