@@ -160,3 +160,7 @@
 
 - Martin Fri Dec 21 13:39:17 CET 2007
   - voip2fhem added (contrib/)
+
+- Peter Sun Dec 23 19:59:00 MEST 2007
+  - linux.html: Introduction refinement.
+
